<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all">

        <item android:id="@+id/nav_coin"
            android:icon="@mipmap/coin"
            android:title="@string/nav_coin"/>

        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_ollect"/>

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/my_setting"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/my_share"/>
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/my_come_to"/>

        <item
            android:id="@+id/nav_version"
            android:icon="@mipmap/help"
            android:title="@string/my_version"/>
    </group>
</menu>
